Problem-with-Python-Environtment-Setup
kateb@Kates-MacBook-Pro ~ % pip3 install arrow
Collecting arrow
  Using cached arrow-1.2.2-py3-none-any.whl (64 kB)
Collecting python-dateutil>=2.7.0
  Using cached python_dateutil-2.8.2-py2.py3-none-any.whl (247 kB)
Collecting six>=1.5
  Downloading six-1.16.0-py2.py3-none-any.whl (11 kB)
Installing collected packages: six, python-dateutil, arrow
Successfully installed arrow-1.2.2 python-dateutil-2.8.2 six-1.16.0
WARNING: You are using pip version 22.0.4; however, version 22.1.2 is available.
You should consider upgrading via the '/Library/Frameworks/Python.framework/Versions/3.10/bin/python3.10 -m pip install --upgrade pip' command.
kateb@Kates-MacBook-Pro ~ % python3
Python 3.10.5 (v3.10.5:f377153967, Jun  6 2022, 12:36:10) [Clang 13.0.0 (clang-1300.0.29.30)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> import arrow
>>> date = arrow.get('2020-01-18'. 'YYYY-MM-DD')
  File "<stdin>", line 1
    date = arrow.get('2020-01-18'. 'YYYY-MM-DD')
                                   ^^^^^^^^^^^^
SyntaxError: invalid syntax
>>> date = arrow.get('2020-01-18'.'YYYY-MM-DD')
  File "<stdin>", line 1
    date = arrow.get('2020-01-18'.'YYYY-MM-DD')
                                  ^^^^^^^^^^^^
SyntaxError: invalid syntax
>>> >>> date.shift(weeks=+6).format('MMM DD YYYY')
  File "<stdin>", line 1
    date.shift(weeks=+ks=+6).format('MMM DD YYYY')
                        ^
SyntaxError: invalid syntax
>>> exit()
kateb@Kates-MacBook-Pro ~ % python3 --version
Python 3.10.5
kateb@Kates-MacBook-Pro ~ % python3
Python 3.10.5 (v3.10.5:f377153967, Jun  6 2022, 12:36:10) [Clang 13.0.0 (clang-1300.0.29.30)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> import arrow
>>> date = arrow.get('2020-01-18'. 'YYYY-MM-DD')
  File "<stdin>", line 1
    date = arrow.get('2020-01-18'. 'YYYY-MM-DD')
                                   ^^^^^^^^^^^^
SyntaxError: invalid syntax
